--- a/app/static/base_style.css
+++ b/app/static/base_style.css
@@ -17,10 +17,18 @@
     padding: 0;
 }
 
+main {
+    margin-left: 80px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 100vh;
+}
+
 /* -------------------------------------------- SIDEBAR DOCCARE LOGO -------------------------------------------- */
 .cms-logo { 
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     align-items: center;
     justify-content: center;
     font-size: 12px;
@@ -28,10 +36,10 @@
 }
 
 .cms-logo img {
-    width: 40px;
+    width: 35px;
     justify-content: center;
-    margin-left: 11px;
-    margin-bottom: 20px;
+    margin-left: 13px;
+    margin-bottom: 11px;
 }
 
 /* -------------------------------------------- SIDEBAR -------------------------------------------- */
@@ -57,7 +65,7 @@
 /* notifications */
 .notifications {
     width: 80%;  
-    height: 50px; 
+    height: 45px; 
     margin-left: 6px;
 }
 
@@ -68,24 +76,24 @@
 /* icon */
 .icon-bg {
     width: 80%;  
-    height: 50px; 
-    border-radius: 30px; 
+    height: 40px; 
+    border-radius: 20%; 
     transition: width 0.3s;
     margin-left: 6px;
 }
 
 .icon-bg:hover {
     transition: 0.5s;
-    background-color: white;
-    border-radius: 100%;
+    background-color: rgba(255, 255, 255, 0.600);
+    border-radius: 20%;
 }
 
 /* selected icon */
 .selected-icon-bg {
     width: 80%;  
-    height: 50px;   
+    height: 40px;   
     background-color: white; 
-    border-radius: 100%; 
+    border-radius: 20%; 
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
     margin-left: 6px;
 }
@@ -119,7 +127,7 @@ ul {
 }
 
 ul li {
-    margin-bottom: 5px;
+    margin-bottom: 3px;
     display: flex;
     align-items: center;
     cursor: pointer;
@@ -134,8 +142,8 @@ a {
 }
 
 ul li img {
-    margin-left: 14px;
-    width: 23px;
+    margin-left: 15px;
+    width: 21px;
 }
 
 ul li p {
@@ -144,9 +152,9 @@ ul li p {
 }
 
 .navbar {
+    position: relative;
     width: 100%;
     height: 62px;
-    position: relative;
     background-color: white;
     border-bottom: 1px solid var(--blueC);
 }
@@ -158,8 +166,8 @@ ul li p {
     align-items: center;
     height: 50px; 
     overflow: hidden;
-    margin-bottom: 20px;
-    margin-top: 20%;
+    margin-bottom: 10px;
+    margin-top: 35%;
 }
 
 .sidenav-user-bg:hover {
@@ -195,21 +203,17 @@ ul li p {
 /* -------------------------------------------- DASHBOARD -------------------------------------------- */
 .date-time {
     font-weight: 900;
-    position: absolute;
+    position: relative;
     display: flex;
-    top: 190px;
-    left: 120px;
+    margin-top: 1%;
+    margin-left: 1%;
     color: var(--darkBlue);
 }
 
 .doctor-bg img {
-    position: absolute;
-    width: 91vw;
-    max-width: 100%;
-    height: auto;
-    max-height: 150px;
-    top: 1vw;
-    right: 36px;
+    position: relative;
+    margin-top: 10px;
+    width: 98%; 
     border-radius: 20px;
 } 
 
@@ -236,12 +240,16 @@ ul li p {
 
 /* -------------------------------------------- ADD ICONS -------------------------------------------- */
 .add-icon img {
+    position: fixed;
+    top: 10px;
+    left: 95%;
     width: 40px;
     right: 50px;
-    top: 10px;
-    justify-content: flex-end;
     border-radius: 100%;
     z-index: 99;
+    z-index: 99;
+    position: fixed;
+    z-index: 99;    
     position: fixed;
 }
 
@@ -251,18 +259,19 @@ ul li p {
 
 /* -------------------------------------------- PATIENT TABLE -------------------------------------------- */
 .patient-header p {
-    position: absolute;
+    position: relative;
     top: 20px;
-    left: 120px;
+    text-align: left;
+    padding: 0px 25px;
     font-weight: 900;
     font-size: 18px;
 }
 
 .patient-table {
-    width: 91%;
-    position: absolute; 
-    top: 90px; 
-    right: 35px;
+    position: relative; 
+    margin-top: 15px;
+    margin-left: 25px;
+    width: 97%;
     line-height: 1.5;
     color: var(--darkBlue);
     background-color: white;
@@ -385,11 +394,11 @@ ul li p {
     border-radius: 0.25rem; 
     margin-left: 15px;
     height: 35px;
-    width: 235px;
+    width: 500px;  
 }
 
 .dataTables_wrapper .dataTables_filter {
-    margin-left: 77%;
+    position: relative;
 }
   
 .dataTables_wrapper .dataTables_filter input:focus {
@@ -432,6 +441,7 @@ ul li p {
 
 /* -------------------------------------------- BUTTONS -------------------------------------------- */
 .btn-container {
+    position: relative;
     display: flex;
     justify-content: center; 
     align-items: center; 
@@ -439,6 +449,7 @@ ul li p {
 }
 
 .btn-submit {
+    position: relative;
     color: white;
     background-color: var(--blueD);
     border: none;
@@ -586,11 +597,11 @@ textarea:focus {
     padding: 10px;
     border-bottom: 1px solid var(--blueA);
     color: var(--blueA);
-    font-size: 12px;
+    font-size: 10px;
 }
   
 .modal-body {
-    padding: 25px;
+    padding: 10px;
     font-size: 17px;
     justify-content: center;
     text-align: center;
